(FEAT): Finished the header section

--- a/index.html
+++ b/index.html
@@ -1,1 +1,63 @@
- 
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Zou Farms</title>
+    <link rel="stylesheet" href="styles.css" />
+    <script
+      src="https://kit.fontawesome.com/dada1a77bc.js"
+      crossorigin="anonymous"
+    ></script>
+  </head>
+  <body>
+    <nav>
+      <img src="./images/Logo.png" alt="logo" />
+      <ul id="menu">
+        <li>
+          <a href="#">Home</a>
+        </li>
+        <li>
+          <a href="#">Product</a>
+        </li>
+        <li>
+          <a href="#">Team</a>
+        </li>
+        <li>
+          <a href="#">Blog</a>
+        </li>
+        <li>
+          <a href="#">Contact</a>
+        </li>
+      </ul>
+
+      <div class="mobile-bar" onclick="toggleMobileMenu();">
+        <span></span>
+        <span></span>
+        <span></span>
+      </div>
+
+      <button type="button" class="nav-signup">
+        <i class="far fa-user"></i> Sign Up
+      </button>
+    </nav>
+
+    <!-- Header Section -->
+    <header>
+      <div class="left-part">
+        <h2>A New Way To Invest In Agriculture</h2>
+        <p>
+          Zou provides farmes, ranchers, private foresters, and agricultural
+          producers with online self service applications and educational
+          materials.
+        </p>
+        <button class="cta">Invest Now</button>
+      </div>
+      <div class="main-illustration">
+        <img src="./images/main illustration.png" alt="main-illustration" />
+      </div>
+    </header>
+    <script src="index.js"></script>
+  </body>
+</html>
