(FEAT): Added the plantain by the size

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
       <div class="left-part">
         <h2>A New Way To Invest In Agriculture</h2>
         <p>
-          Zou provides farmes, ranchers, private foresters, and agricultural
+          Zou provides farmers, ranchers, private foresters and agricultural
           producers with online self service applications and educational
           materials.
         </p>
@@ -58,6 +58,10 @@
         <img src="./images/main illustration.png" alt="main-illustration" />
       </div>
     </header>
+    <div class="plantain">
+      <img src="./images/plantain.svg" alt="" />
+    </div>
+    
     <script src="index.js"></script>
   </body>
 </html>
