(FEAT): Added the new opportunities section

--- a/index.html
+++ b/index.html
@@ -58,6 +58,13 @@
         <img src="./images/main illustration.png" alt="main-illustration" />
       </div>
     </header>
+
+    <!-- New Opportunities Section -->
+    <section id="new-opportunities">
+      <div><h2 >New Opportunities</h2></div>
+      <div ><p class="about">We are the first and only crowd-funding platform enabling you to help finance our farmers</p></div>
+    </section>
+
     <script src="index.js"></script>
   </body>
 </html>
