(FEAT): Finished styling the benefit section

--- a/index.html
+++ b/index.html
@@ -59,16 +59,61 @@
       </div>
     </header>
 
-    <!-- New Opportunities Section -->
-    <section id="new-opportunities">
-      <div><h2 >New Opportunities</h2></div>
-      <div ><p class="about">We are the first and only crowd-funding platform enabling you to help finance our farmers</p></div>
-    </section>
-
     <div class="plantain">
       <img src="./images/plantain.svg" alt="" />
     </div>
-    
+
+    <!-- New Opportunities Section -->
+    <section id="new-opportunities">
+      <div><h2>New Opportunities</h2></div>
+      <div>
+        <p class="about">
+          We are the first and only crowd-funding platform enabling you to help
+          finance our farmers
+        </p>
+      </div>
+    </section>
+
+    <!-- Benefits Section -->
+    <section class="benefit">
+      <div class="benefit-container">
+        <div class="benefit-card">
+          <div class="icon">
+            <img src="./images/connect.svg" alt="connect" />
+          </div>
+            <p class="title">Connect with our farmers</p>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Et iure
+              nobis aliquid tenetur ducimus architecto quae alias, quidem facilis
+              sint!
+            </p>
+        </div>
+        <div class="benefit-card">
+
+          <div class="icon">
+            <img src="./images/growth.svg" alt="connect" />
+          </div>
+          <p class="title">Grow Your Busineess</p>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Et iure
+            nobis aliquid tenetur ducimus architecto quae alias, quidem facilis
+            sint!
+          </p>
+        </div>
+        <div class="benefit-card">
+          <div class="icon">
+            <img src="./images/impact.svg" alt="connect" />
+          </div>
+          <p class="title">Social Impact Investment</p>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Et iure
+            nobis aliquid tenetur ducimus architecto quae alias, quidem facilis
+            sint!
+          </p>
+        </div>
+      </div>
+    </section>
+
     <script src="index.js"></script>
   </body>
 </html>
