(FEAT): Increased line height for body card

--- a/index.html
+++ b/index.html
@@ -81,20 +81,19 @@
           <div class="icon">
             <img src="./images/connect.svg" alt="connect" />
           </div>
-            <p class="title">Connect with our farmers</p>
-            <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Et iure
-              nobis aliquid tenetur ducimus architecto quae alias, quidem facilis
-              sint!
-            </p>
+          <p class="title">Connect with our farmers</p>
+          <p class="body">
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Et iure
+            nobis aliquid tenetur ducimus architecto quae alias, quidem facilis
+            sint!
+          </p>
         </div>
         <div class="benefit-card">
-
           <div class="icon">
             <img src="./images/growth.svg" alt="connect" />
           </div>
           <p class="title">Grow Your Busineess</p>
-          <p>
+          <p class="body">
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Et iure
             nobis aliquid tenetur ducimus architecto quae alias, quidem facilis
             sint!
@@ -105,7 +104,7 @@
             <img src="./images/impact.svg" alt="connect" />
           </div>
           <p class="title">Social Impact Investment</p>
-          <p>
+          <p class="body">
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Et iure
             nobis aliquid tenetur ducimus architecto quae alias, quidem facilis
             sint!
