(FEAT): Added and styled responsive horizontal line

--- a/index.html
+++ b/index.html
@@ -113,6 +113,9 @@
       </div>
     </section>
 
+    <!-- horizontal line -->
+    <hr />
+
     <script src="index.js"></script>
   </body>
 </html>
