(FEAT): Added invest in convinience section and made it responsive

--- a/index.html
+++ b/index.html
@@ -116,6 +116,16 @@
     <!-- horizontal line -->
     <hr />
 
+    <!-- invest in your convienience -->
+    <section class="invest">
+      <h2>Invest in your confidence</h2>
+      <p>
+        Autem vel eum iure reprehenderit qui in ea voluptate velit esse quam
+        nihil molestiae consequatur, vel illum qui dolorem eum fugiat quo
+        voluptas nulla pariatur
+      </p>
+    </section>
+
     <script src="index.js"></script>
   </body>
 </html>
