(FEAT): Added the terms section

--- a/index.html
+++ b/index.html
@@ -126,6 +126,23 @@
       </p>
     </section>
 
+    <!-- Investment Terms -->
+    <section class="terms">
+      <div class="term">
+        <p>New Farm Today</p>
+        <div class="underline"></div>
+        <h3>Short terms Investment</h3>
+        <p>nvest in farms that will be ready for harvest in 3-18 months</p>
+        <a href="#">Browse Farm</a>
+      </div>
+      <div class="term">
+        <p>New Farm Today</p>
+        <div class="underline"></div>
+        <h3>Short terms Investment</h3>
+        <p>nvest in farms that will be ready for harvest in 3-18 months</p>
+        <a href="#">Browse Farm</a>
+      </div>
+    </section>
     <script src="index.js"></script>
   </body>
 </html>
