(FEAT): Finished styling the terms section

--- a/index.html
+++ b/index.html
@@ -129,18 +129,24 @@
     <!-- Investment Terms -->
     <section class="terms">
       <div class="term">
-        <p>New Farm Today</p>
+        <!-- <img src="./images/crate-plant.jpg" alt="farm1"> -->
+        <p class="perk">New Farm Today</p>
         <div class="underline"></div>
-        <h3>Short terms Investment</h3>
-        <p>nvest in farms that will be ready for harvest in 3-18 months</p>
-        <a href="#">Browse Farm</a>
+        <h3>Short term Investment</h3>
+        <p class="invest-message">
+          Invest in farms that will be ready for harvest in 3-18 months
+        </p>
+        <button >Browse Farm</a>
       </div>
       <div class="term">
-        <p>New Farm Today</p>
+        <!-- <img src="./images/farmland.jpg" alt="farm1"> -->
+        <p class="perk">New Farm Today</p>
         <div class="underline"></div>
-        <h3>Short terms Investment</h3>
-        <p>nvest in farms that will be ready for harvest in 3-18 months</p>
-        <a href="#">Browse Farm</a>
+        <h3>Long terms Investment</h3>
+        <p class="invest-message">
+         Consider farms that have long term investment
+        </p>
+        <button >Browse Farm</a>
       </div>
     </section>
     <script src="index.js"></script>
