(FEAT): Started working on the timeline

--- a/index.html
+++ b/index.html
@@ -59,6 +59,7 @@
       </div>
     </header>
 
+    <!-- How It Works Section -->
     <div class="plantain">
       <img src="./images/plantain.svg" alt="" />
     </div>
@@ -149,6 +150,19 @@
         <button >Browse Farm</a>
       </div>
     </section>
+
+<div class="boxx">
+  <div class="black">01</div>
+  <hr>
+  <div class="black">02</div>
+  <hr>
+  <div class="black">03</div>
+  <hr>
+  <div class="black">04</div>
+  <hr>
+  <div class="black">05</div>
+</div>
+
     <script src="index.js"></script>
   </body>
 </html>
