--- a/index.html
+++ b/index.html
@@ -151,6 +151,12 @@
       </div>
     </section>
 
+
+
+<!-- How it worls section -->
+<section class="works">
+  <h1>How it works</h1>
+  <p class="instruction">Take your pick from the supply chain and participate in agribusiness projects that are backed up not only by Zou, but also by the best land, family heritage, innovation and overall superior expertise.</p>
 <div class="boxx">
   <div class="black">01</div>
   <hr>
@@ -162,7 +168,12 @@
   <hr>
   <div class="black">05</div>
 </div>
-
+<div class="bottom-text-row">
+  <h5>  Select your farmshare and complete reservation form.</h5>
+  <p>Et harum quidem rerum facilis est et expedita distinctio. Nam libero tempore, cum soluta nobis est eligendi optio cumque nihil impedit quo minus id quod maxime placeat facere
+</p>
+</div>
+</section>
     <script src="index.js"></script>
   </body>
 </html>
