(FEAT): Made the how it works section responsive

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
       </div>
     </header>
 
-    <!-- How It Works Section -->
+    <!-- Plantain Section -->
     <div class="plantain">
       <img src="./images/plantain.svg" alt="" />
     </div>
