(FEAT): Added the testimonials section

--- a/index.html
+++ b/index.html
@@ -151,8 +151,6 @@
       </div>
     </section>
 
-
-
 <!-- How it worls section -->
 <section class="works">
   <h1>How it works</h1>
@@ -175,6 +173,55 @@
 </p>
 </div>
 </section>
+
+<!-- Investor's cComments -->
+<sections class="comments">
+  <div class="row">
+    <h2>What investors like you are saying about zou</h2>
+    <img src="./images/comment.svg" alt="cmment">
+  </div>
+</sections>
+
+<!-- testimonial-section -->
+<section class="testimonial">
+  <div class="container">
+    <div class="test-card">
+      <div class="identity">
+        <img src="./images/photo-1569389397653-c04fe624e663.jpg" alt="potrait">
+        <div >
+          <h4 class="name">Fernando Soler</h4>
+          <h4>Telecommunication Engineer</h4>
+        </div>
+      </div>
+      <p class="testimony">" Quis autem vel eum iure reprehenderit qui in ea voluptate velit esse quam nihil molestiae consequatur, vel illum qui dolorem eum fugiat.</p>
+    </div>
+    <div class="test-card">
+      <div class="identity">
+        <img src="./images/photo-1569389397653-c04fe624e663.jpg" alt="potrait">
+        <div >
+          <h4 class="name">Fernando Soler</h4>
+          <h4>Telecommunication Engineer</h4>
+        </div>
+      </div>
+      <p class="testimony">" Quis autem vel eum iure reprehenderit qui in ea voluptate velit esse quam nihil molestiae consequatur, vel illum qui dolorem eum fugiat.</p>
+    </div>
+    <div class="test-card">
+      <div class="identity">
+        <img src="./images/photo-1569389397653-c04fe624e663.jpg" alt="potrait">
+        <div >
+          <h4 class="name">Fernando Soler</h4>
+          <h4>Telecommunication Engineer</h4>
+        </div>
+      </div>
+      <p class="testimony">" Quis autem vel eum iure reprehenderit qui in ea voluptate velit esse quam nihil molestiae consequatur, vel illum qui dolorem eum fugiat.</p>
+    </div>
+ 
+  </div>
+  
+</section>
+
+
+
     <script src="index.js"></script>
   </body>
 </html>
