(FEAT): Completed the website

--- a/index.html
+++ b/index.html
@@ -220,7 +220,41 @@
   
 </section>
 
+<!-- Future Section -->
+<section class="future">
+  <div class="card">
+    <h2>The future of <b>Farm Investing</b> is Zou</h2>
+    <button class="cta">Invest Now</button>
+  </div>
+</section>
 
+<!-- shortcuts -->
+<section class="shortcuts">
+  <div class="row">
+    <div class="company">
+      <h3>COMPANY</h3>
+      <p>About Us</p>
+      <p>Team</p>
+      <p>Careers</p>
+      <p>Contact</p>
+    </div>
+
+    <div class="invest-col">
+      <h3>LEGAL</h3>
+      <p>Privacy</p>
+      <p>Terms</p>
+      <p>Security</p>
+    </div>
+    <div class="legal">
+      <h3>LEGAL</h3>
+      <p>Privacy</p>
+      <p>Terms</p>
+      <p>Security</p>
+    </div>
+  </div>
+</section>
+
+<!-- footer -->
 
     <script src="index.js"></script>
   </body>
