(FEAT): Added the footer section

--- a/index.html
+++ b/index.html
@@ -255,7 +255,9 @@
 </section>
 
 <!-- footer -->
-
+<footer>
+  <p>Developed by <a href="https://www.instagram.com/growing_dev/">Samuel Valentine</a></p>
+</footer>
     <script src="index.js"></script>
   </body>
 </html>
